--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <script type="text/javascript" src="https://rawgithub.com/craftyjs/Crafty/release/dist/crafty-min.js"></script>
-        <script type="text/javascript" src="/js/game.js"></script>
-        <script type="text/javascript" src="/js/components.js"></script>
-        <script type="text/javascript" src="/js/scenes.js"></script>
+        <!-- <script type="text/javascript" src="lib/crafty-min.js"></script> -->
+        <script type="text/javascript" src="lib/crafty.js"></script>
+        <script type="text/javascript" src="js/game.js"></script>
+        <script type="text/javascript" src="js/components.js"></script>
+        <script type="text/javascript" src="js/scenes.js"></script>
 
         <script>
             window.addEventListener('load', Game.start);
