--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script type="text/javascript" src="lib/crafty.js"></script>
         <script type="text/javascript" src="js/game.js"></script>
         <script type="text/javascript" src="js/components.js"></script>
+        <script type="text/javascript" src="js/environment.js"></script>
         <script type="text/javascript" src="js/scenes.js"></script>
 
         <script>
