bagger run bug fix

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="js/components.js"></script>
         <script type="text/javascript" src="js/environment.js"></script>
         <script type="text/javascript" src="js/enemies/bagger.js"></script>
+        <script type="text/javascript" src="js/enemies/snek.js"></script>
         <script type="text/javascript" src="js/ui.js"></script>
         <script type="text/javascript" src="js/scenes.js"></script>
 
@@ -17,5 +18,5 @@
     <body>
       
     </body>
-    
+
   </html>
