fixing snek bug causing restarts to break

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Mutoid</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <!-- <script type="text/javascript" src="lib/crafty-min.js"></script> -->
         <script type="text/javascript" src="lib/crafty.js"></script>
