ally converts now become new monsters

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="js/environment.js"></script>
         <script type="text/javascript" src="js/enemies/bagger.js"></script>
         <script type="text/javascript" src="js/enemies/snek.js"></script>
+        <script type="text/javascript" src="js/enemies/allyconvert.js"></script>
         <script type="text/javascript" src="js/ui.js"></script>
         <script type="text/javascript" src="js/scenes.js"></script>
 
